--- a/style.css
+++ b/style.css
@@ -1,16 +1,8 @@
-* 
-{
-    box-sizing: border-box;
-    text-align: center
-}
-.clearfix::after
-{
-   content: '';
-   display: block;
-   clear: both; 
-}
+
+
 body {
     font-family: Arial; 
+    margin:auto;
     color: #777;
     background: #777;
     font-size:18px;
@@ -19,65 +11,50 @@ body {
 
 }
 
-header {
-    padding:20px;
-    margin-bottom: 20px;
+header,nav, section, aside, footer {
+    display:block;
+    padding: 10px;
+    margin: 10px;
     background: #ebebeb;
-     
+    text-align: center;
 }
 
-#nav {
-    padding:20px;
-    margin-bottom: 20px;
-    background: #ebebeb;
-    
-}
-aside {
-    float: right;
-    height: 295px;
-    padding: 20px;
-    background: #ebebeb;
-    width:40%;
-}
-#section {
+section {
+    display: block;
     float: left;
-    height: 295px;
-    padding: 20px;
-    background: #ebebeb;
-    width:60%;
-    margin-bottom: 40px;
-}
+    width: 495px;
+    height: 267px;
+    overflow: hidden;
+  }
+  
+  aside {
+    display: block;
+    float: right;
+    width: 40%;
+    height: 267px;
+    overflow: hidden;
+  }
+
 article {
-    padding: 20px;
-    color: #ebebeb;
-    background: #777;
-    width:60%;
-}
-
-#p{
-    padding:20px;
-    color: #777;
-    background: #ebebeb;
-
-}
-
-#h1{
-    padding: 20px;
-    color: #777;
-    background: #ebebeb;
-    margin-bottom: 20px;
-}
-#blank{
-    padding: 1px;
+    padding: 10px;
     color: #ebebeb;
     background: #777;
 }
 
-footer {
-    padding: 20px;
-    background: #ebebeb;
-    width:100%;
+.clear{
+    clear: both;
 }
+
+h1,
+p {
+  width: 90%;
+  padding: 10px;
+  margin: 10px;
+  color: #777;
+  text-align: center;
+  background: #ebebeb;
+}
+
 
 
 
